--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 title: Audrey Cigolotti.
 email: cigolottiaudrey@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Hi there! Welcome to my realm, where I showcase the different
-  projects I worked on. You will find a much detailed presentation in
-  the about page. Enjoy!
+  Hi there! Welcome to my realm, where I showcase cherry-picked projects I work on over the years. 
+  I would, of course, love to talk about them (or some others) in further detail during a conversation! 
+  Don't hesitate to contact me. Cheers!
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: audreycgltt
