--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: > # this means to ignore newlines until "baseurl:"
   I would, of course, love to talk about them (or some others) in further detail during a conversation! 
   Don't hesitate to contact me. Cheers!
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "https://mastoq.cool" # the base hostname & protocol for your site
 twitter_username: audreycgltt
 github_username:  audreycgltt
 linkedin_username: audreycgltt
